tests/cases/variables/ok/array-len-literal.ari
fn main() -> i64 {
  return len([1, 2, 3, 4]);
}
