tests/cases/variables/errors/variables-assign-immutable.ari
fn main() -> i64 {
  let value = 1;
  value = 2;
  return value;
}
